[package]
name = "ra-updater"
version = "0.1.0"
edition = "2021"
authors = ["Deep Majumder <deep.majumder2019@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.16"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }
reqwest = "0.11.0"
home = "0.5.3"
